# PoseKit

./: .gitignore  Mintfile  README.md  mise.toml
PoseKitApp/: Bundler.toml  Package.swift
PoseKitApp/Sources/PoseKitApp/App/: PoseKitApp.swift  PreferencesStore.swift  RootTabView.swift
PoseKitApp/Sources/PoseKitApp/Capture/: ARSessionManager.swift  CaptureView.swift  CaptureViewModel.swift  SkeletonOverlayView.swift  StatusBannerView.swift
PoseKitApp/Sources/PoseKitApp/Export/: ExportSheet.swift  Exporter.swift
PoseKitApp/Sources/PoseKitApp/Playback/: OrbitController.swift  PlaybackView.swift  PlaybackViewModel.swift  Pose3DSceneView.swift
PoseKitApp/Sources/PoseKitApp/PoseModel/: Pose2DModeling.swift  PoseKitModel.swift
PoseKitApp/Sources/PoseKitApp/PosePipeline/: DepthSampler.swift  PoseCanonicalizer.swift  PoseMath.swift  PosePipeline.swift  PoseSmoother.swift
PoseKitApp/Sources/PoseKitApp/Settings.bundle/: DepthSource.plist  OverlayStyle.plist  Root.plist
PoseKitApp/Sources/PoseKitApp/Storage/: TakeLoader.swift  TakeRecorder.swift  TakeStore.swift
PoseKitApp/Sources/PoseKitApp/Types/: PoseTypes.swift  (+1 more)
PoseKitApp/Tests/PoseKitAppTests/: PoseMathTests.swift
PoseKitModel/: pyproject.toml
PoseKitModel/pkmodel/: cli.py  config_loader.py  data_tools.py  evaluate.py  generate_coreml.py  prepare_coco.py  train.py
PoseKitModel/pkmodel/lib/: __init__.py  loss.py  models.py  task.py  utils.py
PoseKitModel/pkmodel/lib/data/: data.py  data_augment.py  data_tools.py
PoseKitPaper/: .gitignore  main.tex  references.bib
yoga82/: yoga82.txt
(+2 files in other folders)
