[project]
name = "posekitmodel"
version = "0.1.0"
authors = [{ name = "surinrasu", email = "srs@surindaku.dev" }]
requires-python = ">=3.12,<3.15"

[tool.poetry]
packages = [{ include = "pkmodel" }]

[tool.poetry.scripts]
pkmodel = "pkmodel.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
opencv-python = "^4.12.0.88"
numpy = ">=2,<2.3.0"
torch = "^2.9.1"
torchvision = "^0.24.1"
pillow = "^12.1.0"
pandas = "^2.3.3"
albumentations = "^2.0.8"
tomli = "^2.4.0"
torchsummary = "^1.5.1"
